[package]
name = "rusty_rogue"
version = "1.0.0"
authors = ["Ali Karim <samskarim@gmail.com>"]
edition = "2021"

[dependencies]
rltk = { version = "0.8.0", features = ["serde"] }
specs = { version = "0.16.1", features = ["serde"] }
specs-derive = "0.4.1"
serde= { version = "^1.0.44", features = ["derive"] }
serde_json = "^1.0.44"
